[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Mobs/Floating Skeleton test.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Floating_Skeleton.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Collisions/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Collisions/Hurtbox.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=3]
radius = 3.0
height = 4.0

[sub_resource type="Animation" id=6]
resource_name = "Bullet_Spawn"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("LineOfSight_DMG/Bullet_Spawn:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("FS_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 28, 32, 36, 38, 40, 41 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FS_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FS_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LineOfSight_DMG/Bullet_Spawn:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 16 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Spawn"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("FS_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 6, 8, 10, 12, 14 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Bullet_Spawn"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("LineOfSight_DMG/Bullet_Spawn:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=60]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FS_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LineOfSight_DMG/Bullet_Spawn:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 16 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.0
height = 6.0

[node name="Floating Skeleton" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="HP" type="Sprite" parent="."]
position = Vector2( 0, -13.3333 )
texture = ExtResource( 1 )
hframes = 4
vframes = 13
frame = 44

[node name="FS_Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
vframes = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bullet_Spawn = SubResource( 6 )
anims/Death = SubResource( 7 )
anims/Idle = SubResource( 8 )
anims/RESET = SubResource( 9 )
anims/Spawn = SubResource( 10 )

[node name="AnimationBullet" type="AnimationPlayer" parent="."]
anims/Bullet_Spawn = SubResource( 11 )
anims/RESET = SubResource( 60 )

[node name="Hitbox_F_Skeleton" parent="." instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox_F_Skeleton" index="0"]
shape = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 5 )
disabled = true

[node name="LineOfSight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 3

[node name="LineOfSight_DMG" type="RayCast2D" parent="."]
cast_to = Vector2( 10, 0 )

[node name="Bullet_Spawn" type="Sprite" parent="LineOfSight_DMG"]
position = Vector2( 14, 0 )
texture = ExtResource( 1 )
hframes = 4
vframes = 13
frame = 16

[node name="Position2D" type="Position2D" parent="LineOfSight_DMG"]
position = Vector2( 10, 0 )
__meta__ = {
"_gizmo_extents_": 0.0
}

[node name="Position2D2" type="Position2D" parent="LineOfSight_DMG"]
position = Vector2( 10, 4 )

[node name="Position2D3" type="Position2D" parent="LineOfSight_DMG"]
position = Vector2( 10, -4 )

[node name="Invisibility" type="Label" parent="."]
visible = false
modulate = Color( 0.141176, 1, 0, 1 )
margin_left = 4.0
margin_top = -9.0
margin_right = 59.0
margin_bottom = 5.0
rect_scale = Vector2( 0.3, 0.3 )
text = "invisibility"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationBullet" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hitbox_F_Skeleton"]
[editable path="Hurtbox"]
